--- a/KrysiaBartek2024/source/oppsOvercallTfx1c.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1c.tex
@@ -15,7 +15,59 @@
 %%% TITLE: 1\clubs\ opening: dealing with opponent's overcall
 %%% SYSTEM BEGIN %%%
 
-TODO
+\subsubsection*{1\clubs -- (1\diams) -- ?}
+\begin{itemize}
+    \item \dbl = 7+, 4+\hearts
+    \item 1\hearts = 7+, 4+\spades
+    \item 1\spades = \then 1\nt
+    \item 1\nt = 7-10, \diams stopper
+    \item 2\clubs = 54\major 6-11
+    \item 2\diams/2\hearts/2\spades = transfer to \hearts/\spades/\clubs 6+, weak/\gf
+    \item 2\nt = \inv
+    \item 3\clubs = \inv
+    \item 3\diams = ask stopper, long \clubs
+\end{itemize}
+
+\subsubsection*{1\clubs -- (1\hearts) -- ?}
+\begin{itemize}
+    \item \dbl = 7+, 4+\spades
+    \item 1\spades = \then 1\nt
+    \item 1\nt = 7-10, \hearts stopper
+    \item 2\clubs/2\hearts/2\spades = transfer to \diams/\spades/\clubs 6+, weak/\gf
+    \item 2\diams = \invp, ask stopper
+    \item 2\nt = \inv
+    \item 3\clubs/3\diams/3\spades = \inv
+\end{itemize}
+
+\subsubsection*{1\clubs -- (1\spades) -- ?}
+\begin{itemize}
+    \item \dbl = 4-5\hearts
+    \item 1\nt = 7-10, \spades stopper
+    \item 2\clubs/2\diams/2\spades = transfer to \diams/\hearts/\clubs 6+, weak/\gf
+    \item 2\hearts = \gf, ask stopper
+    \item 2\nt = \inv
+    \item 3\clubs/3\diams/3\hearts = \inv
+\end{itemize}
+
+\subsubsection*{1\clubs -- (1\nt) -- ?}
+\begin{itemize}
+    \item \dbl = penalty 9+
+    \item 2\clubs = 54\major (44)
+    \item 2\diams/2\hearts/2\spades = \nf
+    \item 2\nt = 55\minor
+    \item 3\anysuit{x} = \inv \unbal
+\end{itemize}
+
+\subsubsection*{1\clubs -- (2\clubs) -- ?}
+2\clubs = \clubs
+\begin{itemize}
+    \item \dbl = negative
+    \item 2\diams/2\hearts/2\spades = \nf
+    \item 2\nt = 54\major \gf
+    \item 3\clubs/3\diams/3\hearts = transfer to \diams/\hearts/\clubs 5+, \invp
+    \item 3\spades = ask \clubs stopper
+    \item 3\nt = to play
+\end{itemize}
 
 %%% SYSTEM END %%%
 
