--- a/KrysiaBartek2024/source/oppsOvercallTfx1d.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1d.tex
@@ -15,7 +15,53 @@
 %%% TITLE: 1\diams\ opening: dealing with opponent's overcall
 %%% SYSTEM BEGIN %%%
 
-TODO
+\subsubsection*{1\diams -- (1\hearts) -- ?}
+2\nt = \minor
+\begin{itemize}
+    \item \dbl = 4+\spades
+    \item 1\spades = \then 1\nt
+    \item 1\nt = 7-10
+    \item 2\clubs/2\hearts/2\spades = transfer to \diams/\spades/\clubs, weak/\gf
+    \item 2\diams = \diams \inv
+    \item 2\nt = \inv
+    \item 3\clubs/3\spades = \nat, \inv
+    \item 3\diams = preempt
+\end{itemize}
+
+\subsubsection*{1\diams -- (1\spades) -- ?}
+2\nt = \minor
+\begin{itemize}
+    \item \dbl = 4-5\hearts
+    \item 1\nt = 7-10
+    \item 2\clubs/2\diams/2\spades = transfer to \diams/\hearts/\clubs, weak/\gf
+    \item 2\hearts = \diams \inv
+    \item 2\nt = \inv
+    \item 3\clubs/3\hearts = \nat, \inv
+    \item 3\diams = preempt
+\end{itemize}
+
+\subsubsection*{1\diams -- (1\nt) -- ?}
+2\nt = \minor
+\begin{itemize}
+    \item \dbl = penalty 10+
+    \item 2\clubs = 54\major (44)
+    \item 2\diams/2\hearts/2\spades = \nf
+    \item 2\nt = \inv \diams
+    \item 3\anysuit = \nat, \inv\ \unbal
+    \item 3\diams = preempt
+\end{itemize}
+
+\subsubsection*{1\diams -- (2\clubs) -- ?}
+2\nt = \minor
+\begin{itemize}
+    \item \dbl = takeout
+    \item 2\diams = \nat
+    \item 2\hearts/2\spades = \nat, \fonce
+    \item 2\nt = 54\major
+    \item 3\clubs = \diams \invp
+    \item 3\diams = preempt
+    \item 3\hearts/3\spades = color+fit
+\end{itemize}
 
 %%% SYSTEM END %%%
 
