--- a/KrysiaBartek2024/source/transfers1MX_KacperVersion.tex
+++ b/KrysiaBartek2024/source/transfers1MX_KacperVersion.tex
@@ -15,7 +15,6 @@
 %%% TITLE: 1\major\ (\dbl)
 %%% SYSTEM BEGIN %%%
 
-\begin{bidpage}
 \subsubsection*{1\hearts -- (\dbl) -- ?}
 \begin{itemize}
     \item \rdbl = 10+ (may have 3\hearts)
@@ -24,11 +23,9 @@
     \item 2\clubs = \trsf{2\diams}
     \item 2\diams = \trsf{2\hearts}, constructive 8-10
     \item 2\hearts = 4-7, 3\hearts
+    \item \small{SYSTEM ON}
 \end{itemize}
-\small{SYSTEM ON}
-\end{bidpage}
 
-\begin{bidpage}
 \subsubsection*{1\spades -- (\dbl) -- ?}
 \begin{itemize}
     \item \rdbl = 10+ (may have 3\spades)
@@ -37,9 +34,8 @@
     \item 2\diams = \trsf{2\hearts}
     \item 2\hearts = \trsf{2\spades}, constructive 8-10
     \item 2\spades = 4-7, 3\spades
+    \item \small{SYSTEM ON}
 \end{itemize}
-\small{SYSTEM ON}
-\end{bidpage}
 
 %%% SYSTEM END %%%
 
