--- a/KrysiaBartek2024/source/oppsOvercallTfx1dPreempt.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1dPreempt.tex
@@ -15,7 +15,45 @@
 %%% TITLE: 1\diams\ opening: dealing with opponent's preempt overcall
 %%% SYSTEM BEGIN %%%
 
-TODO
+\subsubsection*{1\diams -- (2\hearts) -- ?}
+2\nt = \minor
+\begin{itemize}
+    \item \dbl = takeout
+    \item 2\spades = \nat\ \nf
+    \item 2\nt/3\clubs/3\hearts = transfer to \clubs/\diams/\spades \invp
+    \item 3\diams = competitive
+\end{itemize}
+
+\subsubsection*{1\diams -- (2\spades) -- ?}
+2\nt = \minor
+\begin{itemize}
+    \item \dbl = takeout
+    \item 2\nt/3\clubs = transfer to \clubs/\diams, \invp
+    \item 3\diams = competitive
+    \item 3\hearts = \nat, \gf
+\end{itemize}
+
+\subsubsection*{1\diams -- (3\clubs) -- ?}
+2\nt = \minor
+\begin{itemize}
+    \item \dbl = takeout, \gf
+    \item 3\diams = competitive
+    \item 3\hearts = \spades, \invp
+    \item 3\spades = \hearts, \gf
+\end{itemize}
+
+\subsubsection*{1\diams -- (3\hearts) -- ?}
+2\nt = \minor
+\begin{itemize}
+    \item \dbl = \spades, \gf
+    \item 3\spades = 4\spades, no \hearts stopper, \gf
+\end{itemize}
+
+\subsubsection*{1\diams -- (3\spades) -- ?}
+2\nt = \minor
+\begin{itemize}
+    \item \dbl = \hearts, \gf
+\end{itemize}
 
 %%% SYSTEM END %%%
 
