--- a/KrysiaBartek2024/source/1ntOpening_KacperVersion.tex
+++ b/KrysiaBartek2024/source/1ntOpening_KacperVersion.tex
@@ -15,7 +15,193 @@
 %%% TITLE: 1\ntx\ opening
 %%% SYSTEM BEGIN %%%
 
-TODO
+\subsubsection*{1\nt -- ?}
+\begin{itemize}
+    \item 2\clubs = Stayman
+    \item 2\diams/2\hearts = \then \major
+    \item 2\spades = \then \clubs
+    \item 2\nt = 6+\diams weak/\gf or \minor weak (54)
+    \item 3\clubs = Puppet Stayman (like after 2\nt opening) \imp
+    \item 3\diams = 6+\diams\ \inv
+    \item 3\major = 4441 (\major shortness) \gf \qq
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                ?}
+\begin{itemize}
+    \item 2\diams = no 4\major
+    \item 2\hearts = 4\hearts
+    \item 2\spades = 4\spades
+    \item 2\nt = both 4\major, min
+    \item 3\clubs = both 4\major, max
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                2\diams -- ?}
+\begin{itemize}
+    \item 2\hearts = \major weak
+    \item 2\spades = 5\spades, \inv
+    \item 2\nt = \inv
+    \item 3\clubs = ask shape
+    \item 3\diams = ask 3\major
+    \item 3\hearts = \clubs shortness
+    \item 3\spades = \diams shortness
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                2\diams -- 3\clubs\\
+                ?}
+\begin{itemize}
+    \item 3\diams = 5\minor \qq
+    \item 3\hearts = 2\spades
+    \item 3\spades = 2\hearts
+    \item 3\nt = 33(34)
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                2\diams -- 3\diams\\
+                3\major -- ?}
+\begin{itemize}
+    \item 3\nt/4\major = to play
+    \item other = cuebid
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                2\hearts -- ?}
+\begin{itemize}
+    \item 2\spades = relay (2\nt = min, 3\clubs = max)
+    \item 2\nt = 5\spades, \inv
+    \item 3\clubs = ask shape
+    \item 3\diams = \minor shortness
+    \item 3\hearts = \inv
+    \item 3\spades/4\minor = splinter
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                2\hearts -- 2\spades\\
+                2\nt -- ?}
+\begin{itemize}
+    \item \pass - \inv\ \bal
+    \item 3\clubs = 6\clubs4\spades \inv
+    \item 3\diams = 6\diams4\spades \inv
+    \item 3\hearts = 4\hearts slam try, no splinter
+    \item 3\nt = choice of games
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                2\hearts -- 2\spades\\
+                3\clubs -- ?}
+\begin{itemize}
+    \item 3\diams = 6\minor4\spades (3\hearts = ask)
+    \item 3\hearts = 4\hearts slam try, no splinter
+    \item 3\nt = to play
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = \inv
+    \item 3\clubs = ask shape
+    \item 3\diams = \minor shortness
+    \item 3\hearts = 4\hearts slam try, no splinter
+    \item 3\spades = \inv
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                2\major -- 3\clubs\\
+                ?}
+\begin{itemize}
+    \item 3\diams = 43\minor
+    \item 3\hearts = 4\clubs
+    \item 3\spades = 4\diams
+    \item 3\nt = 4333 (4\major)
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                2\nt -- ?}
+\begin{itemize}
+    \item \pass = \inv\ \bal
+    \item 3\clubs = 6+\diams, \clubs shortness, no 4\major, \gf
+    \item 3\diams = 4+\hearts
+    \item 3\hearts = 4+\spades
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\clubs\\
+                3\clubs -- ?}
+\begin{itemize}
+    \item 3\diams = 4+\hearts
+    \item 3\hearts = 4+\spades
+    \item 3\spades = 6+\diams, \clubs shortness, no 4\major, \gf
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\diams/2\hearts\\
+                ?}
+\begin{itemize}
+    \item 2\major = acc
+    \item 2\nt = 4+\major max
+    \item 3\major = 4+\major min
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\diams\\
+                2\hearts -- ?}
+\begin{itemize}
+    \item 2\spades = \inv
+    \item 2\nt = 4+\clubs \gf
+    \item 3\clubs = 4+\diams \gf
+    \item 3\diams = 6+\hearts \gf
+    \item 3\hearts = 5\hearts4\spades, \inv
+    \item 3\spades/4\minor = splinter
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\diams\\
+                2\hearts -- 2\spades\\
+                ?}
+\begin{itemize}
+    \item 2\nt/3\hearts =min
+    \item 3\clubs = max, no 3\hearts
+    \item 3\diams = max, 3\hearts
+    \item 3\nt = choice of games
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\diams\\
+                2\hearts -- 2\nt\\
+                ?}
+\begin{itemize}
+    \item 3\clubs = 3\hearts + 4\clubs
+    \item 3\diams = 3\hearts
+    \item 3\hearts = 4\clubs
+    \item 3\nt = to play
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\hearts\\
+                2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = 4+\clubs \gf
+    \item 3\clubs = 4+\diams \gf
+    \item 3\diams = 55\major, \inv
+    \item 3\hearts = 6+\spades \gf
+    \item 3\spades = 6+\spades \inv
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\spades\\
+                ?}
+\begin{itemize}
+    \item 2\nt = min
+    \item 3\clubs = max
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\nt\\
+                ?}
+\begin{itemize}
+    \item 3\minor = better minor
+\end{itemize}
+
+\subsubsection*{1\nt -- 2\nt\\
+                3\minor -- ?}
+\begin{itemize}
+    \item 3\diams = to play
+    \item 3\major = splinter (agreeing \diams)
+\end{itemize}
 
 %%% SYSTEM END %%%
 
