rebid with 3-card supp

--- a/KrysiaBartek2024/source/rebid3Card_KacperVersion.tex
+++ b/KrysiaBartek2024/source/rebid3Card_KacperVersion.tex
@@ -5,7 +5,7 @@
 \setmainlanguage{english}
 
 \title{Rebid with 3-card support}
-\author{Krystyna Gasińska\\based on Kacper Kuflowski's system}
+\author{Krystyna Gasińska\\\textit{Kacper Kuflowski's ideas}}
 \begin{document}
 \maketitle
 
@@ -15,7 +15,156 @@
 %%% TITLE: Rebid with 3-card support
 %%% SYSTEM BEGIN %%%
 
-TODO
+Do not rebid 2\spades with 3(244).\\
+With 43(42) rebid 1\spades, not 2\hearts.
+
+\subsubsection*{1\clubs -- 1\hearts\\
+                2\hearts -- ?}
+\begin{itemize}
+    \item 2\spades = \gf
+    \item 2\nt = \inv \spades
+    \item 3\minor/3\hearts = \inv
+\end{itemize}
+
+\subsubsection*{1\clubs -- 1\hearts\\
+                2\hearts -- 2\spades\\
+                ?}
+\begin{itemize}
+    \item 2\nt = 4\hearts (3\clubs = ask)
+    \item 3\clubs = 3\hearts + shortness (3\diams = ask, does not agree \hearts)
+    \item 3\diams = 2326
+    \item 3\hearts = 3325
+    \item 3\spades = 2335
+    \item 3\nt = 2344
+\end{itemize}
+
+\subsubsection*{1\clubs -- 1\hearts\\
+                2\hearts -- 2\spades\\
+                2\nt -- 3\clubs\\
+                ?}
+\begin{itemize}
+    \item 3\diams = \bal
+    \item 3\hearts = 2425
+    \item 3\spades = 3415
+    \item 3\nt = 1435
+\end{itemize}
+
+\subsubsection*{1\clubs -- 1\spades\\
+                2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = \gf
+    \item 3\anysuit{x} = \inv
+\end{itemize}
+
+\subsubsection*{1\clubs -- 1\spades\\
+                2\spades -- 2\nt\\
+                ?}
+\begin{itemize}
+    \item 3\clubs = 4\spades (3\diams = ask)
+    \item 3\diams = 3\spades + shortness (3\hearts = ask, does not agree \spades)
+    \item 3\hearts = 3226
+    \item 3\spades = 3325
+    \item 3\nt = 3235
+\end{itemize}
+
+\subsubsection*{1\clubs -- 1\spades\\
+                2\spades -- 2\nt\\
+                3\clubs -- 3\diams\\
+                ?}
+\begin{itemize}
+    \item 3\hearts = \bal
+    \item 3\spades = 4225
+    \item 3\nt = 4315
+    \item 4\clubs = 4135
+\end{itemize}
+
+\subsubsection*{1\diams -- 1\hearts\\
+                2\hearts -- ?}
+\begin{itemize}
+    \item 2\spades = \gf
+    \item 2\nt = \inv \spades
+    \item 3\minor/3\hearts = \inv
+\end{itemize}
+
+\subsubsection*{1\diams -- 1\hearts\\
+                2\hearts -- 2\spades\\
+                ?}
+\begin{itemize}
+    \item 2\nt = 4\hearts (3\clubs = ask)
+    \item 3\clubs = 3\hearts + shortness (3\diams = ask, does not agree \hearts)
+    \item 3\diams = 2362
+    \item 3\hearts = 3352
+    \item 3\spades = 2335
+    \item 3\nt = 2352
+\end{itemize}
+
+\subsubsection*{1\diams -- 1\hearts\\
+                2\hearts -- 2\spades\\
+                2\nt -- 3\clubs\\
+                ?}
+\begin{itemize}
+    \item 3\diams = 2452
+    \item 3\hearts = 3451/4441
+    \item 3\spades = 1453/1444
+\end{itemize}
+
+\subsubsection*{1\diams -- 1\spades\\
+                2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = \gf
+    \item 3\anysuit{x} = \inv
+\end{itemize}
+
+\subsubsection*{1\diams -- 1\spades\\
+                2\spades -- 2\nt\\
+                ?}
+\begin{itemize}
+    \item 3\clubs = 4\spades (3\diams = ask)
+    \item 3\diams = 3\spades + shortness (3\hearts = ask, does not agree \spades)
+    \item 3\hearts = 3262
+    \item 3\spades = 3352
+    \item 3\nt = 3252
+\end{itemize}
+
+\subsubsection*{1\diams -- 1\spades\\
+                2\spades -- 2\nt\\
+                3\clubs -- 3\diams\\
+                ?}
+\begin{itemize}
+    \item 3\hearts = \bal
+    \item 3\spades = 4252
+    \item 3\nt = 4351
+    \item 4\clubs = 4153
+\end{itemize}
+
+\subsubsection*{1\hearts -- 1\spades\\
+                2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = \gf
+    \item 3\anysuit{x} = \inv
+\end{itemize}
+
+\subsubsection*{1\hearts -- 1\spades\\
+                2\spades -- 2\nt\\
+                ?}
+\begin{itemize}
+    \item 3\clubs = 4\spades (3\diams = ask)
+    \item 3\diams = 3\spades + shortness (3\hearts = ask, does not agree \spades)
+    \item 3\hearts = 3622
+    \item 3\spades = 3532
+    \item 3\nt = 3523
+\end{itemize}
+
+\subsubsection*{1\hearts -- 1\spades\\
+                2\spades -- 2\nt\\
+                3\clubs -- 3\diams\\
+                ?}
+\begin{itemize}
+    \item 3\hearts = \bal
+    \item 3\spades = 4522
+    \item 3\nt = 4531
+    \item 4\clubs = 4513
+\end{itemize}
 
 %%% SYSTEM END %%%
 
