rebid with 3-card supp

--- a/KrysiaBartek2024/source/rebid3Card_KacperVersion.tex
+++ b/KrysiaBartek2024/source/rebid3Card_KacperVersion.tex
@@ -22,7 +22,7 @@ With 43(42) rebid 1\spades, not 2\hearts.
                 2\hearts -- ?}
 \begin{itemize}
     \item 2\spades = \gf
-    \item 2\nt = \inv \spades
+    \item 2\nt = \inv\ \spades
     \item 3\minor/3\hearts = \inv
 \end{itemize}
 
@@ -82,7 +82,7 @@ With 43(42) rebid 1\spades, not 2\hearts.
                 2\hearts -- ?}
 \begin{itemize}
     \item 2\spades = \gf
-    \item 2\nt = \inv \spades
+    \item 2\nt = \inv\ \spades
     \item 3\minor/3\hearts = \inv
 \end{itemize}
 
