--- a/KrysiaBartek2024/source/1dOpening_easyVersion.tex
+++ b/KrysiaBartek2024/source/1dOpening_easyVersion.tex
@@ -25,6 +25,8 @@
     \item 2\hearts\ = 5\spades4\hearts\ 5-11
     \item 2\spades\ = 11+ \bal, no 4\major
     \item 2\nt = 11-12 \bal
+    \item 3\clubs\ = \diams preempt or shortness, strong hand (\then 3\diams)
+    \item 3\diams\ = mixed raise
     \item 3\nt = 15-17 \bal
 \end{itemize}
 
@@ -38,6 +40,12 @@
 \begin{itemize}
     \item 1\nt = 12-14 \bal, may have 1\spades
     \item 2\diams = 6+\diams
+\end{itemize}
+
+\subsubsection*{1\diams -- 3\clubs\\
+                3\diams -- ?}
+\begin{itemize}
+    \item 3\hearts/3\spades/3\nt = \hearts/\spades/\clubs shortness
 \end{itemize}
 
 \subsubsection*{1\diams -- 1\major\\
