--- a/KrysiaBartek2024/source/1ntOpening_KacperVersion.tex
+++ b/KrysiaBartek2024/source/1ntOpening_KacperVersion.tex
@@ -113,7 +113,7 @@
 \begin{itemize}
     \item 3\diams = 43\minor
     \item 3\hearts = 4\clubs
-    \item 3\spades = 4\diams
+    \item 3\spades = 4\diams (over 2\spades: slam try + fit)
     \item 3\nt = 4333 (4\major)
 \end{itemize}
 
