--- a/KrysiaBartek2024/source/oppsOvercallTfx1sPreempt.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1sPreempt.tex
@@ -15,7 +15,40 @@
 %%% TITLE: 1\spades\ opening: dealing with opponent's preempt overcall
 %%% SYSTEM BEGIN %%%
 
-TODO
+\subsubsection*{1\spades -- (3\clubs) -- ?}
+\begin{itemize}
+    \item \dbl = take out
+    \item 3\diams = \hearts, \invp
+    \item 3\hearts = \spades, competative/\gf
+    \item 3\spades = \spades, \inv
+    \item 3\nt = to play
+    \item 4\clubs = slam try, no \clubs shortness
+    \item 4\diams = slam try, \clubs shortness
+    \item 4\hearts/4\spades = to play
+\end{itemize}
+
+\subsubsection*{1\spades -- (3\diams) -- ?}
+\begin{itemize}
+    \item \dbl = takeout
+    \item 3\hearts = \hearts \gf
+    \item 3\spades = competitive
+    \item 3\nt = to play
+    \item 4\clubs = slam try, no \diams shortness
+    \item 4\diams = slam try, \diams shortness
+    \item 4\hearts/4\spades = to play
+\end{itemize}
+
+\subsubsection*{1\spades -- (3\hearts) -- ?}
+\begin{itemize}
+    \item \dbl = takeout
+    \item 3\spades = competitive
+    \item 3\nt = to play
+    \item 4\clubs = slam try, no \diams shortness
+    \item 4\diams = slam try, \diams shortness
+    \item 4\hearts = slam try, \hearts void
+    \item 4\spades = to play
+    \item 4\nt = minors
+\end{itemize}
 
 %%% SYSTEM END %%%
 
