--- a/KrysiaBartek2024/source/1dOpening.tex
+++ b/KrysiaBartek2024/source/1dOpening.tex
@@ -25,6 +25,8 @@
     \item 2\hearts\ = 5\spades4\hearts\ 5-11
     \item 2\spades\ = 11+ \bal, no 4\major
     \item 2\nt = 11-12 \bal
+    \item 3\clubs\ = \diams preempt or shortness, strong hand (\then 3\diams)
+    \item 3\diams\ = mixed raise
     \item 3\nt = 15-17 \bal
 \end{itemize}
 
@@ -106,6 +108,12 @@ bidding higher suit denies lower stopper
     \item 3\hearts\ = 1-\hearts, 5+\diams\ \gf
     \item 3\spades\ = 1-\spades, 5+\diams\ \gf
     \item 3\nt\ = to play
+\end{itemize}
+
+\subsubsection*{1\diams -- 3\clubs\\
+                3\diams -- ?}
+\begin{itemize}
+    \item 3\hearts/3\spades/3\nt = \hearts/\spades/\clubs shortness
 \end{itemize}
 
 %%% SYSTEM END %%%
