--- a/KrysiaBartek2024/source/acolControls.tex
+++ b/KrysiaBartek2024/source/acolControls.tex
@@ -43,6 +43,42 @@
     \item 4\spades = 55\minor, \spades shortness
 \end{itemize}
 
+\subsubsection*{2\clubs\ -- 2\diams\\
+                2\hearts -- 2\spades\\
+                ?}
+\begin{itemize}
+    \item 3\clubs = 5\hearts4\minor3\spades
+    \item 3\diams = 6\hearts
+    \item 3\hearts = 5\hearts4\spades, \spades shortness
+    \item 3\spades = 5\hearts4\clubs, \spades shortness
+    \item 3\nt = to play
+    \item 4\minor = leaping
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- 2\diams\\
+                2\hearts -- 2\spades\\
+                3\clubs -- ?}
+\begin{itemize}
+    \item 3\diams = no fit
+    \item 3\hearts/3\spades = \hearts/\spades fit
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- 2\diams\\
+                2\hearts -- 2\spades\\
+                3\clubs -- 3\anysuit{x}}
+\begin{itemize}
+    \item \anysuit{x+1} = 4\clubs
+    \item \anysuit{x+2} = 4\diams
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- 2\diams\\
+                2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = support
+    \item 3\clubs/3\diams/3\hearts = transfer to \diams/\hearts/\clubs
+    \item 3\spades = no support
+\end{itemize}
+
 \subsubsection*{2\clubs\ -- 2\hearts\\?}
 \begin{itemize}
     \item 2\spades = 5+\spades
@@ -52,18 +88,31 @@
     \item 3\hearts = 5+\hearts
     \item 3\spades = 4\spades5+\diams
     \item 3\nt = 4\hearts6+\diams, \fonce
+    \item 4\clubs = \hearts void
+    \item 4\diams = \spades void
     \item 4\hearts = 55\minor, \hearts shortness
     \item 4\spades = 55\minor, \spades shortness
 \end{itemize}
 
-\subsubsection*{2\clubs\ -- 2\spades\\
+\subsubsection*{2\clubs\ -- 2\spades\\?}
+\begin{itemize}
+    \item 2\nt = 22+, \bal
+    \item 3\anysuit{x} = 5+
+    \item 3\nt = 6+\diams4\major
+    \item 4\clubs = \hearts void
+    \item 4\diams = \spades void
+    \item 4\hearts = 55\minor, \hearts shortness
+    \item 4\spades = 55\minor, \spades shortness
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- 2\anysuit{x}\\
                 3\clubs -- ?}
 \begin{itemize}
     \item 3\diams = ask 4\major
     \item 3\hearts/3\spades = 5\hearts/5\spades
 \end{itemize}
 
-\subsubsection*{2\clubs\ -- 2\spades\\
+\subsubsection*{2\clubs\ -- 2\anysuit{x}\\
                 3\clubs -- 3\hearts}
 any color = agreeing \hearts, cue
 
