--- a/KrysiaBartek2024/source/gazilli.tex
+++ b/KrysiaBartek2024/source/gazilli.tex
@@ -113,7 +113,7 @@
                 2\nt -- ?}
 \begin{itemize}
     \item 3\clubs = \pass/correct
-    \item 3\diams = ask\gf
+    \item 3\diams = ask, \gf
     \item 3\major = agreeing \major
     \item 3\twosuit{\spades}{\hearts} = \nat
 \end{itemize}
