--- a/KrysiaBartek2024/source/acolControlsInterference.tex
+++ b/KrysiaBartek2024/source/acolControlsInterference.tex
@@ -15,7 +15,26 @@
 %%% TITLE: Acol interference -- controls
 %%% SYSTEM BEGIN %%%
 
-TODO
+\subsubsection*{2\clubs\ -- (\dbl) -- ?}
+\begin{itemize}
+    \item \rdbl = 0-1 controls
+    \item 2\hearts\ = 2+ controls
+    \item \anysuit{x} = 2+ controls, \nat
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- (2/3\anysuit{x}) -- ?}
+\begin{itemize}
+    \item \dbl = 0-1 controls
+    \item \pass = 2+ controls
+    \item \anysuit{y} = 2+ controls, \nat
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- (P) -- 2\diams -- (2/3\anysuit{x})\\
+                ?}
+\begin{itemize}
+    \item \dbl = takeout
+    \item \pass = \then \dbl
+\end{itemize}
 
 %%% SYSTEM END %%%
 
