--- a/KrysiaBartek2024/source/oppsOvercallTfx1cPreempt.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1cPreempt.tex
@@ -70,7 +70,7 @@
 \subsubsection*{1\clubs -- (3\hearts) -- ?}
 2\nt = \minor
 \begin{itemize}
-    \item \dbl = \spades, \gf
+    \item \dbl = \spades, \invp
     \item 3\spades = 4\spades, no \hearts stopper, \gf
 \end{itemize}
 
