--- a/KrysiaBartek2024/source/oppsOvercallTfx1c.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1c.tex
@@ -55,19 +55,19 @@
     \item 2\clubs = 54\major (44)
     \item 2\diams/2\hearts/2\spades = \nf
     \item 2\nt = 55\minor
-    \item 3\anysuit{x} = \inv \unbal
+    \item 3\anysuit{x} = \inv\ \unbal
 \end{itemize}
 
-\subsubsection*{1\clubs -- (2\clubs) -- ?}
-2\clubs = \clubs
-\begin{itemize}
-    \item \dbl = negative
-    \item 2\diams/2\hearts/2\spades = \nf
-    \item 2\nt = 54\major \gf
-    \item 3\clubs/3\diams/3\hearts = transfer to \diams/\hearts/\clubs 5+, \invp
-    \item 3\spades = ask \clubs stopper
-    \item 3\nt = to play
-\end{itemize}
+% \subsubsection*{1\clubs -- (2\clubs) -- ?}
+% 2\clubs = \clubs
+% \begin{itemize}
+%     \item \dbl = negative
+%     \item 2\diams/2\hearts/2\spades = \nf
+%     \item 2\nt = 54\major\ \gf
+%     \item 3\clubs/3\diams/3\hearts = transfer to \diams/\hearts/\clubs 5+, \invp
+%     \item 3\spades = ask \clubs stopper
+%     \item 3\nt = to play
+% \end{itemize}
 
 %%% SYSTEM END %%%
 
