--- a/KrysiaBartek2024/source/oppsOvercallTfx1cPreempt.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1cPreempt.tex
@@ -21,7 +21,7 @@
     \item \dbl = takeout
     \item 2\hearts/2\spades = \nat\ \nf
     \item 2\nt/3\diams/3\hearts = transfer to \clubs/\hearts/\spades \invp
-    \item 3\clubs = 54\major \gf
+    \item 3\clubs = 54\major\ \gf
     \item 3\spades = ask for \diams stopper
 \end{itemize}
 
