--- a/KrysiaBartek2024/source/oppsOvercallTfx1hPreempt.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1hPreempt.tex
@@ -42,7 +42,7 @@
     \item \dbl = takeout
     \item 3\diams = \hearts, competative/\gf
     \item 3\hearts = \hearts, \inv
-    \item 3\spades = \spades \gf
+    \item 3\spades = \spades\ \gf
     \item 4\clubs = slam try, no \clubs shortness
     \item 4\diams = slam try, \clubs shortness
 \end{itemize}
