--- a/KrysiaBartek2024/source/oppsOvercallTfx1s.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1s.tex
@@ -43,7 +43,7 @@
     \item \dbl = takeout
     \item 2\hearts = \fonce
     \item 2\spades = 6-10
-    \item 2\nt = \clubs \invp
+    \item 2\nt = \clubs\ \invp
     \item 3\clubs = fit, \gf
     \item 3\diams = fit, \inv
     \item 3\hearts = mixed raise
@@ -55,8 +55,8 @@
 \begin{itemize}
     \item \dbl = takeout
     \item 2\spades = 6-10
-    \item 2\nt = \clubs \invp
-    \item 3\clubs = \diams \invp
+    \item 2\nt = \clubs\ \invp
+    \item 3\clubs = \diams\ \invp
     \item 3\diams = \spades, \gf
     \item 3\hearts = \spades, \inv
     \item 3\spades = preempt
