--- a/KrysiaBartek2024/source/oppsOvercallTfx1sPreempt.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1sPreempt.tex
@@ -30,7 +30,7 @@
 \subsubsection*{1\spades -- (3\diams) -- ?}
 \begin{itemize}
     \item \dbl = takeout
-    \item 3\hearts = \hearts \gf
+    \item 3\hearts = \hearts\ \gf
     \item 3\spades = competitive
     \item 3\nt = to play
     \item 4\clubs = slam try, no \diams shortness
