--- a/KrysiaBartek2024/source/oppsOvercallTfx1d.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1d.tex
@@ -22,7 +22,7 @@
     \item 1\spades = \then 1\nt
     \item 1\nt = 7-10
     \item 2\clubs/2\hearts/2\spades = transfer to \diams/\spades/\clubs, weak/\gf
-    \item 2\diams = \diams \inv
+    \item 2\diams = \diams\ \inv
     \item 2\nt = \inv
     \item 3\clubs/3\spades = \nat, \inv
     \item 3\diams = preempt
@@ -34,7 +34,7 @@
     \item \dbl = 4-5\hearts
     \item 1\nt = 7-10
     \item 2\clubs/2\diams/2\spades = transfer to \diams/\hearts/\clubs, weak/\gf
-    \item 2\hearts = \diams \inv
+    \item 2\hearts = \diams\ \inv
     \item 2\nt = \inv
     \item 3\clubs/3\hearts = \nat, \inv
     \item 3\diams = preempt
@@ -46,7 +46,7 @@
     \item \dbl = penalty 10+
     \item 2\clubs = 54\major (44)
     \item 2\diams/2\hearts/2\spades = \nf
-    \item 2\nt = \inv \diams
+    \item 2\nt = \inv\ \diams
     \item 3\anysuit = \nat, \inv\ \unbal
     \item 3\diams = preempt
 \end{itemize}
@@ -58,7 +58,7 @@
     \item 2\diams = \nat
     \item 2\hearts/2\spades = \nat, \fonce
     \item 2\nt = 54\major
-    \item 3\clubs = \diams \invp
+    \item 3\clubs = \diams\ \invp
     \item 3\diams = preempt
     \item 3\hearts/3\spades = color+fit
 \end{itemize}
