--- a/KrysiaBartek2024/source/1MOpening_KacperVersion.tex
+++ b/KrysiaBartek2024/source/1MOpening_KacperVersion.tex
@@ -17,8 +17,8 @@
 
 \subsubsection*{1\hearts -- ?}
 \begin{itemize}
-    \item 1\spades = 4+\spades, no 3\hearts OR 5\spades3\hearts + \gf
-    \item 1\nt = 5-11\hcp, (or 5-7\hcp with 2-3\hearts)
+    \item 1\spades = 4+\spades, no 3\hearts \orr 5\spades3\hearts + \gf
+    \item 1\nt = 5-11, (or 5-7 with 2-3\hearts)
     \item 2\clubs = any \gf
     \item 2\diams = 5\diams, \gf
     \item 2\hearts = constructive raise
@@ -30,13 +30,13 @@
     \item 3\spades = splinter \spades
     \item 3\nt = splinter \diams
     \item 4\clubs = splinter \clubs
-    \item 4\diams = 11\hcp, 4\hearts, no shortness
+    \item 4\diams = 11 \hcp, 4\hearts, no shortness
     \item 4\spades/5\clubs/5\diams = EXRKCB 0314
 \end{itemize}
 
 \subsubsection*{1\spades -- ?}
 \begin{itemize}
-    \item 1\nt = 5-11\hcp, (or 5-7\hcp with 2-3\spades)
+    \item 1\nt = 5-11, (or 5-7 with 2-3\spades)
     \item 2\clubs = any \gf
     \item 2\diams = 5\diams, \gf
     \item 2\hearts = 5\hearts, \gf
@@ -48,7 +48,7 @@
     \item 3\spades = preempt
     \item 3\nt = splinter \hearts
     \item 4\clubs/4\diams = splinter
-    \item 4\hearts = 11\hcp, 4\spades, no shortness
+    \item 4\hearts = 11 \hcp, 4\spades, no shortness
 \end{itemize}
 
 \subsubsection*{1\hearts -- 1\spades\\
