--- a/KrysiaBartek2024/source/1cOpening.tex
+++ b/KrysiaBartek2024/source/1cOpening.tex
@@ -74,7 +74,7 @@
 \begin{itemize}
     \item 2\nt\ = \bal min
     \item 3\clubs\ = 5+\clubs min
-    \item 3\diams\ = 5+\clubs \gf
+    \item 3\diams\ = 5+\clubs\ \gf
     \item 3\hearts\ = 1-\hearts, 5+\clubs\ \gf
     \item 3\spades\ = 1-\spades, 5+\clubs\ \gf
     \item 3\nt\ = to play
