--- a/KrysiaBartek2024/source/1ntOpening_KacperVersion.tex
+++ b/KrysiaBartek2024/source/1ntOpening_KacperVersion.tex
@@ -81,9 +81,9 @@
                 2\hearts -- 2\spades\\
                 2\nt -- ?}
 \begin{itemize}
-    \item \pass - \inv\ \bal
-    \item 3\clubs = 6\clubs4\spades \inv
-    \item 3\diams = 6\diams4\spades \inv
+    \item \pass = \inv\ \bal
+    \item 3\clubs = 6\clubs4\spades\ \inv
+    \item 3\diams = 6\diams4\spades\ \inv
     \item 3\hearts = 4\hearts slam try, no splinter
     \item 3\nt = choice of games
 \end{itemize}
@@ -103,7 +103,7 @@
     \item 2\nt = \inv
     \item 3\clubs = ask shape
     \item 3\diams = \minor shortness
-    \item 3\hearts = 4\hearts slam try, no splinter
+    \item 3\hearts = 4\spades slam try, no splinter
     \item 3\spades = \inv
 \end{itemize}
 
@@ -146,7 +146,7 @@
                 2\hearts -- ?}
 \begin{itemize}
     \item 2\spades = \inv
-    \item 2\nt = 4+\clubs \gf
+    \item 2\nt = 4+\clubs\ \gf
     \item 3\clubs = 4+\diams \gf
     \item 3\diams = 6+\hearts \gf
     \item 3\hearts = 5\hearts4\spades, \inv
@@ -176,7 +176,7 @@
 \subsubsection*{1\nt -- 2\hearts\\
                 2\spades -- ?}
 \begin{itemize}
-    \item 2\nt = 4+\clubs \gf
+    \item 2\nt = 4+\clubs\ \gf
     \item 3\clubs = 4+\diams \gf
     \item 3\diams = 55\major, \inv
     \item 3\hearts = 6+\spades \gf
