--- a/KrysiaBartek2024/source/checkback_KacperVersion.tex
+++ b/KrysiaBartek2024/source/checkback_KacperVersion.tex
@@ -22,6 +22,16 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 \begin{itemize}
     \item 2\clubs\ = any invite, forces 2\diams
     \item 2\diams\ = any \gf
+    \item 2\nt = \then 3\clubs, weak or 55
+\end{itemize}
+
+\subsubsection*{1\anysuit{x}\ -- 1\anysuit{y} \\ 
+                1\anysuit{z} -- 2\nt\\
+                3\clubs -- ?}
+\begin{itemize}
+    \item 3\diams = 5\anysuit{y}5\diams
+    \item 3\hearts = 5\anysuit{y}5\hearts
+    \item 3\spades = 5\anysuit{y}5\clubs
 \end{itemize}
 
 %%% SYSTEM END %%%
