--- a/KrysiaBartek2024/source/oppsOvercallTfx1cPreempt.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1cPreempt.tex
@@ -20,7 +20,7 @@
 \begin{itemize}
     \item \dbl = takeout
     \item 2\hearts/2\spades = \nat\ \nf
-    \item 2\nt/3\diams/3\hearts = transfer to \clubs/\hearts/\spades \invp
+    \item 2\nt/3\diams/3\hearts = transfer to \clubs/\hearts/\spades\ \invp
     \item 3\clubs = 54\major\ \gf
     \item 3\spades = ask for \diams stopper
 \end{itemize}
@@ -29,7 +29,7 @@
 \begin{itemize}
     \item \dbl = takeout
     \item 2\spades = \nat\ \nf
-    \item 2\nt/3\clubs/3\hearts = transfer to \clubs/\diams/\spades \invp
+    \item 2\nt/3\clubs/3\hearts = transfer to \clubs/\diams/\spades\ \invp
     \item 3\diams = ask stopper
     \item 3\spades = \minor
 \end{itemize}
@@ -37,22 +37,21 @@
 \subsubsection*{1\clubs -- (2\spades) -- ?}
 \begin{itemize}
     \item \dbl = takeout
-    \item 2\nt/3\clubs/3\diams = transfer to \clubs/\diams/\hearts \invp
+    \item 2\nt/3\clubs/3\diams = transfer to \clubs/\diams/\hearts\ \invp
     \item 3\hearts = ask stopper
     \item 3\spades = \minor
 \end{itemize}
 
-\subsubsection*{1\clubs -- (2\nt) -- ?}
-2\nt = \minor
-\begin{itemize}
-    \item \dbl = takeout
-    \item 3\clubs = 54\major, \gf
-    \item 3\diams/3\hearts = transfer to \hearts/\spades, \invp
-    \item 3\spades = \then 3\nt
-\end{itemize}
+% \subsubsection*{1\clubs -- (2\nt) -- ?}
+% 2\nt = \minor
+% \begin{itemize}
+%     \item \dbl = takeout
+%     \item 3\clubs = 54\major, \gf
+%     \item 3\diams/3\hearts = transfer to \hearts/\spades, \invp
+%     \item 3\spades = \then 3\nt
+% \end{itemize}
 
 \subsubsection*{1\clubs -- (3\clubs) -- ?}
-2\nt = \minor
 \begin{itemize}
     \item \dbl = takeout, \gf
     \item 3\diams/3\hearts = transfer to \hearts/\spades, \invp
@@ -60,7 +59,6 @@
 \end{itemize}
 
 \subsubsection*{1\clubs -- (3\diams) -- ?}
-2\nt = \minor
 \begin{itemize}
     \item \dbl = takeout, \gf
     \item 3\hearts = transfer to \spades, \invp
@@ -68,14 +66,12 @@
 \end{itemize}
 
 \subsubsection*{1\clubs -- (3\hearts) -- ?}
-2\nt = \minor
 \begin{itemize}
     \item \dbl = \spades, \invp
     \item 3\spades = 4\spades, no \hearts stopper, \gf
 \end{itemize}
 
 \subsubsection*{1\clubs -- (3\spades) -- ?}
-2\nt = \minor
 \begin{itemize}
     \item \dbl = 4\hearts, \gf, no \spades stopper
 \end{itemize}
